feat: update authentication, add refresh controller
